# cpp_starting_project

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: export.hpp  math.hpp
tests/: CMakeLists.txt
